--- a/cockpit/Dockerfile
+++ b/cockpit/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.3-apache
+FROM php:7-apache
 
 RUN apt-get update \
     && apt-get install -y \
@@ -11,7 +11,7 @@ RUN apt-get update \
         libssl-dev \
     && pecl install mongodb \
     && pecl install redis \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) iconv gd pdo zip opcache pdo_sqlite \
     && a2enmod rewrite expires
 
@@ -22,4 +22,7 @@ RUN chown -R www-data:www-data /var/www/html
 
 VOLUME /var/www/html
 
-CMD ["apache2-foreground"]
+COPY ./docker/run-apache2.sh /usr/local/bin/run-apache2.sh
+COPY . /var/www/html/
+
+CMD [ "run-apache2.sh" ]
